--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "dhtmlx-gantt": "^8.0.10",
     "firebase": "^10.13.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.14.1",
+    "react-calendar": "^5.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
